[tool.poetry]
name = "renovate-poetry-version"
version = "0.1.0"
description = ""
authors = ["Florian Greinacher <florian.greinacher@siemens.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "8.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
